# santag

./: makefile  pyproject.toml  readme.md
src/santag/: clipboard.py  convertor.py  get_default_rules.py  main.py
src/santag/domain_model/: rules.py
src/santag/settings/: default_rules.py
test/santag/: test_convertor.py
